<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/list_item_fragment_ranking_sports_tv_nrcrt_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/list_item_ranking_sports_tv_nrcrt_hint" />

    <TextView
        android:id="@+id/list_item_fragment_ranking_sports_tv_sportName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/list_item_ranking_sports_tv_sportName_hint" />

    <TextView
        android:id="@+id/list_item_fragment_ranking_sports_tv_nrUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/list_item_ranking_sports_tv_nrUsers_hint" />
</LinearLayout>