<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants"
    android:id="@+id/linear_layout_location_admin">

    <ImageButton
        android:id="@+id/location_marker_dialog_ibtn_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:src="@drawable/ic_exit"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/location_marker_exit_hint"
        android:background="@drawable/transparent"/>

    <TextView
        android:id="@+id/location_marker_dialog_locationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/darkGrey"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:text="@string/location_marker_dialog_locationName_hint"/>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/location_marker_dialog_locationAddress_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/list_item_location_locationAddress_hint"
            android:textColor="@color/darkGrey"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/location_marker_dialog_locationAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/darkGrey" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/location_marker_dialog_postalCode_hint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/list_item_location_postalCode_hint"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/darkGrey"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/location_marker_dialog_postalCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/darkGrey" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <TextView
            android:id="@+id/location_marker_dialog_email_hint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/list_item_location_email_hint"
            android:textStyle="bold"
            android:textColor="@color/darkGrey"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/location_marker_dialog_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/darkGrey" />
    </LinearLayout>

    <TextView
        android:id="@+id/location_marker_dialog_tv_program_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/darkGrey"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/fragment_location_program_hint" />
    <ListView
        android:id="@+id/location_marker_dialog_lv_program"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/location_marker_dialog_tv_activities_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:textColor="@color/darkGrey"
        android:text="@string/fragment_location_activities_hint" />

    <ExpandableListView
        android:id="@+id/location_marker_dialog_lv_activities"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:groupIndicator="@drawable/ic_groupindicator">
    </ExpandableListView>

    <Button
        android:id="@+id/location_marker_dialog_btn_reservation"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/location_marker_dialog_btn_reservation_hint"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/location_marker_dialog_tv_noLocationFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/darkGrey"
        android:text="@string/location_marker_dialog_tv_noLocationFound_hint" />

</LinearLayout>