<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/list_item_teammates_iv_userPicture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/woman"
            android:contentDescription="@string/profile_img_profile_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/list_item_teammates_tv_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/register1_userName_hint"
                android:textColor="@color/darkGrey" />

            <TextView
                android:id="@+id/list_item_teammates_tv_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_item_usersExplorer_tv_role_hint"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/darkGrey" />
        </LinearLayout>
</LinearLayout>