<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.EditProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/editProfile_toolbar"
        android:layout_width="423dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginEnd="8dp"
        android:background="@color/darkOrange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.v7.widget.Toolbar>
    <ImageButton
        android:id="@+id/editProfile_ibtn_back"
        android:layout_width="52dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/transparent"
        android:contentDescription="@string/editProfile_ibtn_back_hint"
        android:src="?attr/homeAsUpIndicator"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/editProfile_toolbar"
        app:layout_constraintEnd_toStartOf="@+id/editProfile_tv_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editProfile_toolbar"
        app:layout_constraintTop_toTopOf="@+id/editProfile_toolbar" />

    <TextView
        android:id="@+id/editProfile_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/editProfile_tv_title_hint"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editProfile_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/editProfile_iv_profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/profile_img_profile_hint"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfile_toolbar"
        app:srcCompat="@drawable/woman"
        tools:srcCompat="@drawable/woman" />

    <Button
        android:id="@+id/editProfile_btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/register_btn_upload_hint"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfile_iv_profileImage" />

    <TextView
        android:id="@+id/editProfile_tv_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:text="@string/register1_userName_hint"
        android:textColor="@color/darkGrey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfile_btn_upload" />

    <TextView
        android:id="@+id/editProfile_tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/editProfile_tid_email_hint"
        android:textColor="@color/darkGrey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfile_tv_userName" />


    <TextView
        android:id="@+id/editProfile_tv_sports"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/editProfile_tv_sports_hint"
        android:textColor="@color/darkGrey"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfile_tv_email" />

    <ListView
        android:id="@+id/editProfile_lv_sports"
        android:layout_width="338dp"
        android:layout_height="144dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/rectangle_border"
        android:choiceMode="multipleChoice"
        android:scrollbars="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfile_tv_sports" />

    <ImageButton
        android:id="@+id/editProfile_ibtn_addSport"
        android:layout_width="37dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="144dp"
        android:background="@drawable/transparent"
        android:contentDescription="@string/editProfile_ibtn_addSport_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toEndOf="@+id/editProfile_lv_sports"
        app:layout_constraintTop_toBottomOf="@+id/editProfile_tv_sports"
        app:srcCompat="@drawable/add_grey" />

    <ImageButton
        android:id="@+id/editProfile_ibtn_removeSport"
        android:layout_width="37dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/transparent"
        android:contentDescription="@string/editProfile_ibtn_removeSport_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editProfile_lv_sports"
        app:layout_constraintTop_toBottomOf="@+id/editProfile_ibtn_addSport"
        app:srcCompat="@drawable/remove_grey" />

    <Button
        android:id="@+id/editProfile_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/editProfile_btn_cancel_hint"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfile_lv_sports" />

    <Button
        android:id="@+id/editProfile_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/editProfile_btn_save_hint"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toEndOf="@+id/editProfile_btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/editProfile_lv_sports" />

</android.support.constraint.ConstraintLayout>