<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/BlackText">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1.0">

        <TextView
            android:id="@+id/lv_feedback_tv_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            android:textColor="@color/darkGrey"
            android:layout_weight="1.0"
            android:text="@string/lv_feedback_tv_userName_hint" />

        <RatingBar
            android:id="@+id/lv_feedback_ratingbar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:numStars="5"
            android:rating="5"
            android:stepSize="0.1" />

        <ImageButton
            android:id="@+id/lv_review_ibtn_more"
            android:layout_width="28dp"
            android:layout_height="21dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/transparent"
            android:contentDescription="@string/lv_feedback_ibtn_more_hint"
            android:onClick="myClickHandler" />
    </LinearLayout>

    <TextView
        android:id="@+id/lv_feedback_tv_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/darkGrey"
        android:justificationMode="inter_word"
        android:scrollbars="vertical"
        android:text="@string/lv_feedback_tv_comment_hint" />
    <TextView
        android:id="@+id/lv_feedback_tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:textColor="@color/grey"
        android:text="@string/lv_feedback_tv_date_hint"/>
</LinearLayout>